[package]
name = "bevy-procloc"
description = "Procedural humanoid character animation for the bevy game engine."
version = "0.1.0"
repository = "https://github.com/soundeffects/bevy-procloc"
keywords = ["animation", "procedural", "character", "bevy"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.7"
